--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="col-lg-6 mt-2">
                     <div id="leadForm">
-                        <h3 class="text-center mb-0">Lead Form</h3>
+                        <h3 class="text-center mb-0">Want To Get Free Trail</h3>
                         <form action="">
     
                             <div class="row">
@@ -76,7 +76,7 @@
 
 
                                 <div class="col-lg-12 text-center">
-                                    <button type="submit" class="btn btn-lg mt-2">Submit</button>
+                                    <button type="submit" class="btn mt-2">Get Free 50 Leads</button>
                                 </div>
     
                             </div>
@@ -364,6 +364,37 @@
                     </div>
                 </div>
 
+            </div>
+        </div>
+    </div>
+
+
+    <div id="review_section" class="py-4">
+        <div class="container">
+
+            <div class="text-center">
+                <img class="trust_logo" src="./image/Trustpilot_Logo.webp" alt="">
+            </div>
+
+            <div class="row">
+                <div class="col-lg-4 mt-4">
+                    <img src="./image/review1.jpg" alt="">
+                </div>
+                <div class="col-lg-4 mt-4">
+                    <img src="./image/review2.jpg" alt="">
+                </div>
+                <div class="col-lg-4 mt-4">
+                    <img src="./image/review3.jpg" alt="">
+                </div>
+                <div class="col-lg-4 mt-4">
+                    <img src="./image/review4.jpg" alt="">
+                </div>
+                <div class="col-lg-4 mt-4">
+                    <img src="./image/review5.jpg" alt="">
+                </div>
+                <div class="col-lg-4 mt-4">
+                    <img src="./image/review6.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
