--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
                         <h3>Company</h3>
                         <hr>
-                        <div class="row">
+                        <div class="row d-flex align-items-center">
                             <div class="col-lg-5">
                                 <div class="text-center">
                                     <i class="fa-solid fa-location-dot"></i>
