--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="phone">
                 <p class="mb-0"><i class="fa-solid fa-phone"></i> +1 347-946-2478</p>
             </div>
-            <div>
+            <div class="email">
                 <p class="mb-0"><i class="fa-solid fa-envelope"></i> info@leadgenerationbd.com</p>
             </div>
         </div>
@@ -33,7 +33,7 @@
             <h1 class="text-center">Want to see your sales graph roofing? Get your leads with lead generation services by Lead Generation.</h1>
             <p class="text-center">In order to build a predictable and consistent pipeline, Lead Generation has the best experts to collect leads for you.  Then contact us today to get started if you want to advance your sales strategy in a predictable and consistent manner.</p>
 
-            <div class="row d-flex align-items-center pt-5">
+            <div class="row d-flex align-items-center pt-lg-5">
                 <div class="col-lg-6 mt-2">
                     <div id="video">
                         <iframe width="100%" height="460" src="https://www.youtube.com/embed/tgbNymZ7vqY">
