--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <h2 class="text-center">Lead Generation Delivers Leads That Best Match Your Buyer's Persona To Boost Sales With Less Persuasion.</h2>
 
             <div class="row mt-5">
-                <div class="col-lg-4 mt-3">
+                <div class="col-lg-4 col-md-4 mt-3">
                     <div class="card">
                         <img src="./image/Cart.png" alt="">
                         <div class="card-body text-center">
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mt-3">
+                <div class="col-lg-4 col-md-4 mt-3">
                     <div class="card">
                         <img src="./image/amazon.com_.png" alt="">
                         <div class="card-body text-center">
@@ -218,7 +218,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 mt-3">
+                <div class="col-lg-4 col-md-4 mt-3">
                     <div class="card">
                         <img src="./image/briefcase-i.png" alt="">
                         <div class="card-body text-center">
@@ -373,26 +373,26 @@
         <div class="container">
 
             <div class="text-center">
-                <img class="trust_logo" src="./image/Trustpilot_Logo.webp" alt="">
+                <h2>Our Customer Feedback</h2>
             </div>
 
             <div class="row">
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-4 col-md-6 mt-4 review-col">
                     <img src="./image/review1.jpg" alt="">
                 </div>
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-4 col-md-6 mt-4 review-col">
                     <img src="./image/review2.jpg" alt="">
                 </div>
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-4 col-md-6 mt-4 review-col">
                     <img src="./image/review3.jpg" alt="">
                 </div>
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-4 col-md-6 mt-4 review-col">
                     <img src="./image/review4.jpg" alt="">
                 </div>
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-4 col-md-6 mt-4 review-col">
                     <img src="./image/review5.jpg" alt="">
                 </div>
-                <div class="col-lg-4 mt-4">
+                <div class="col-lg-4 col-md-6 mt-4 review-col">
                     <img src="./image/review6.jpg" alt="">
                 </div>
             </div>
